--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,9 +19,21 @@ requirements:
     - pip
     - python >=3.6
   run:
-    - ipyleaflet
-    - ipywidgets
     - python >=3.6
+    - bqplot
+    - colour
+    - folium>=0.12.0
+    - googledrivedownloader
+    - ipyevents
+    - ipyleaflet
+    - matplotlib
+    - numpy
+    - pandas
+    - pycrs
+    - pyshp>=2.1.3
+    - python-box
+    - python-mss
+    - whiteboxgui
 test:
   imports:
     - leafmap
