--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "leafmap" %}
-{% set version = "0.2.0" %}
+{% set version = "0.3.0" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: fd88a41e5ba8b842db28d1ae164b5052ac2796f6bd8cd253ac6e6417ee6f110f
+  sha256: eca7fba6ca12d7c1dd701afff40aa3e87084377ab11b963d0253db3cd53c85f6
 
 build:
   number: 0
@@ -24,6 +24,7 @@ requirements:
     - colour
     - folium >=0.12.0
     - googledrivedownloader
+    - here-map-widget-for-jupyter >=1.1.0
     - ipyevents
     - ipyleaflet
     - matplotlib-base
