--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "leafmap" %}
-{% set version = "0.5.5" %}
+{% set version = "0.6.0" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: e2ed6cc2b5e924520808ca77a09ba7984783a5aeaacc75a34832c8233355e7af
+  sha256: 25d88c559e51645d24285b1908c27b06b08aeb28c3c0ac0aa2212619b13bb41b
 
 build:
   number: 0
@@ -33,6 +33,7 @@ requirements:
     - matplotlib-base
     - numpy
     - owslib
+    - palettable
     - pandas
     - pycrs
     - pyshp >=2.1.3
