Updated feedstock to v0.8.1

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "leafmap" %}
-{% set version = "0.8.0" %}
+{% set version = "0.8.1" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: 2063158ac3dcba843b275330e00fac6cf68026ecc60ee73665965493f960dc82
+  sha256: a535621ca76e661a7e4c87578819449bbb0b537538174e4fed4043e5c5a4c580
 
 build:
   number: 0
@@ -23,6 +23,7 @@ requirements:
     - bqplot
     - colour
     - folium >=0.11.0
+    - gdown
     - geojson
     - googledrivedownloader
     - here-map-widget-for-jupyter >=1.1.1
