--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "leafmap" %}
-{% set version = "0.9.1" %}
+{% set version = "0.9.2" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: 20261fce72efce736bebdff809fe5767a34c8b36818f25753f9e5b48828d6871
+  sha256: dceb19d555b26c5300a2c7409c4c06840713f520aeaa122ec328124814faa58d
 
 build:
   number: 1
@@ -30,6 +30,7 @@ requirements:
     - ipyleaflet
     - ipysheet
     - jupyterlab >=3.0.0
+    - mapclassify >=2.4.0
     - matplotlib-base
     - numpy
     - pandas
