--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "leafmap" %}
-{% set version = "0.9.5" %}
+{% set version = "0.9.6" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: 3db81800be7485e2b23308f948613948bfb6a49dbd4447d6534e4371561df065
+  sha256: 7a748d321206372d9f315d838e863cf407f50cdf39e433bbbb08c44f867c5b7c
 
 build:
   number: 0
@@ -37,6 +37,7 @@ requirements:
     - pyshp >=2.1.3
     - pystac-client
     - python-box
+    - scooby
     - whiteboxgui >=0.6.0
     - xyzservices
 
