--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,6 +28,7 @@ requirements:
     - ipyevents
     - ipyfilechooser >=0.6.0
     - ipyleaflet >=0.14.0
+    - ipywidgets <8.0.0
     - ipysheet
     - jupyterlab >=3.0.0
     - matplotlib-base
