--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "leafmap" %}
-{% set version = "0.20.4" %}
+{% set version = "0.21.0" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: fa76dde340dee1d61a027659a4cd905fa4a56a9a4d06820825d4e3a16bf21b1a
+  sha256: 81846bed7f926b08a852e6cc05f889e48a07a836be285dd6fbb36329d9e868a2
 
 build:
   number: 0
@@ -22,24 +22,24 @@ requirements:
     - python >=3.7
     - bqplot
     - colour
-    - folium >=0.11.0,<=0.13.0
+    - folium
     - gdown
     - geojson
     - ipyevents
-    - ipyfilechooser >=0.6.0
-    - ipyleaflet >=0.14.0
-    - ipywidgets <8.0.0
+    - ipyfilechooser
+    - ipyleaflet
+    - ipywidgets
     - ipysheet
     - jupyterlab >=3.0.0
     - matplotlib-base
     - numpy
     - pandas
     - pycrs
-    - pyshp >=2.1.3
+    - pyshp 
     - pystac-client
     - python-box
     - scooby
-    - whiteboxgui >=0.6.0
+    - whiteboxgui
     - xyzservices
 
 test:
