--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "leafmap" %}
-{% set version = "0.28.1" %}
+{% set version = "0.29.0" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: 1f9bd3ebba40faa09241735a0a404a0f119010d7ea26a82675a29c8554f45c68
+  sha256: 6566c58880543f3eb98daaaa89af9c0ab4dda9116761ab93d71908c12680433a
 
 build:
   number: 0
@@ -41,6 +41,7 @@ requirements:
     - scooby
     - whiteboxgui
     - xyzservices
+    - python-duckdb
 
 test:
   imports:
