--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
   sha256: 6f6a5b6e3c58eed054ebfd04f3f2881f7deafc6c02c92382e52d76fe107f85b7
 
 build:
-  number: 0
+  number: 1
   noarch: python
   script: {{ PYTHON }} -m pip install . -vv
 
@@ -28,6 +28,7 @@ requirements:
     - ipyevents
     - ipyfilechooser
     - ipyleaflet
+    - ipyvuetify
     - ipywidgets
     - ipysheet
     - jupyterlab
