--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "leafmap" %}
-{% set version = "0.37.3" %}
+{% set version = "0.37.5" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: 4347373f78844d14eebed8f2fbaf34f2728ed7e9f854b4ab459cc5e24f30e419
+  sha256: be14b311e484fabdeffea5d3d37e0d9f7391ec3283c785d81341cb941660103d
 
 build:
   number: 0
@@ -37,7 +37,7 @@ requirements:
     - jupyterlab
     - maplibre
     - matplotlib-base
-    - numpy <2.0.0
+    - numpy
     - pandas
     - plotly
     - pmtiles
