--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,6 @@
 {% set name = "leafmap" %}
 {% set version = "0.42.3" %}
+{% set python_min = "3.9" %}
 
 package:
   name: {{ name|lower }}
@@ -10,17 +11,17 @@ source:
   sha256: 9b6f9104057d44d0fc1521817a0d5fe391312dad0283fb0d9e9bbad35fb6c256
 
 build:
-  number: 0
+  number: 1
   noarch: python
   script: {{ PYTHON }} -m pip install . -vv
 
 requirements:
   host:
     - pip
-    - python >=3.9
+    - python {{ python_min }}
     - setuptools
   run:
-    - python >=3.9
+    - python >={{ python_min }}
     - anywidget
     - bqplot
     - colour
@@ -58,6 +59,7 @@ test:
   #  - pip check
   requires:
     - pip
+    - python {{ python_min }}
 
 about:
   home: https://github.com/opengeos/leafmap
