--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
   sha256: 58681a2cbf34c09b6b29f21a50ae05ba5ea0cfb111e7af4f253c049f4e3f6b87
 
 build:
-  number: 0
+  number: 1
   noarch: python
   script: {{ PYTHON }} -m pip install . -vv
 
@@ -55,8 +55,8 @@ requirements:
 test:
   imports:
     - leafmap
-  # commands:
-  #  - pip check
+  commands:
+   - pip check
   requires:
     - pip
     - python {{ python_min }}
